# orthocache-gpu

./: .gitignore  CITATION.cff  COMMERCIAL_LICENSING.md  README.md  pyproject.toml  pytest.ini
benchmarks/: __init__.py  compaction_benchmark.py  debug_spectral_separation.py  generate_figures.py  generate_fusion_figures.py  generate_hero_figure.py  kaggle_h100_benchmark.py  profile_fusion.py  profile_multihead.py  profiling.py  quick_splitk_test.py  reconstruction_error.py  run_all.py  spectral_analysis.py  target_validation.py
benchmarks/quality/: README.md  __init__.py  attention_hook.py  harness.py
benchmarks/results/: compaction_results.json  fusion_profiling_results.json  gpu_profiling_results.json  multihead_benchmark_results.json  reconstruction_error_results.json  spectral_analysis_results.json  target_validation_report.md
docs/: cost_benefit_analysis.md  mathematical_framework.md  technical_report.md
eval/: calibrate_entropy.py  generate.py  hallucination_eval.py  perplexity_eval.py  pyramid_eval.py
eval/results/: amputated_hallucination.json  calibration.json  empty_haystack.json  (+11 more)
paper/: orthocache_gpu.tex
proofs/: OrthoCacheMath.lean  lake-manifest.json  lakefile.lean
tests/: __init__.py  conftest.py  test_adaptive_attention.py  test_attention.py  test_bandwidth.py  test_compaction.py  test_energy.py  test_fp8.py  test_fused_integration.py  test_fused_kernel.py  test_fwht.py  test_gqa_eviction.py  test_paged_eviction.py  test_perfect_eviction.py  test_pipeline.py  test_spectral_bands.py  test_splitk_kernel.py  test_truncation_bound.py
(+35 files in other folders)
