[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthocache-gpu"
version = "0.1.0"
description = "OrthoCache: Hardware-Native Multi-Band Spectral Attention Block Eviction — GPU/Triton Edition"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
authors = [
    {name = "Justin Arndt", email = "justinarndt05@gmail.com"},
]
keywords = [
    "KV-cache", "attention", "sparsity", "Walsh-Hadamard",
    "GPU", "Triton", "CUDA", "formal verification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5.0",
    "triton>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
